2006-08-12  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_floatmul.c: add SSE2 routine
	
	* CMakeLists.txt, src/arch/i386/x86_simd_support_prk.h,
	admin/CMakeModules/FindCompilerMMXFlag.cmake: preliminary SSE2
	support, currently only with GCC 4.x and 3.4.x
	
	* src/al_mixfunc.c, src/mixaudio16.h,
	src/arch/i386/x86_simd_support_prk.h,
	src/arch/i386/mixaudio16_sse2_prk.c,
	src/arch/i386/mixaudio16_sse2_prk.h,
	src/al_mixer.h, CMakeLists.txt: add SSE2 mixing routines
	
	* src/arch/i386/mixaudio16_sse2_prk.c: make GCC 3.4.x compatible


2006-08-12  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_64_linux_cpu_caps_detect_prk.yasm: added

	* CMakeLists.txt, admin/CMakeModules/CMakeASMCompiler.cmake.in,
    admin/CMakeModules/CMakeASMInformation.cmake,
    admin/CMakeModules/CMakeDetermineASMCompiler.cmake: added yasm
    support and x86_64 Linux CPU features detection

    * src/arch/i386/x86_cpu_caps_detect_prk.nasm,
    src/arch/i386/memcpy_mmx_prk.nasm,
    src/arch/i386/x86_64_linux_cpu_caps_detect_prk.yasm: prevent
    executable stacks when building with yasm

    * CMakeLists.txt, admin/CMakeModules/FindPkgConfig.cmake,
    admin/CMakeModules/FindSelectArgtypes.cmake: minor cosmetics

2006-08-11  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_cpu_caps_prk.h, src/arch/i386/x86_cpu_caps_prk.c:
	add SSE4 detection

2006-08-05  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec.in: We need aRts packages for a complete build.

2006-08-04  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.am: add new CMake modules to distribution

2006-08-04  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Synched files to distribute with reality.

2006-08-03  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerMMXFlag.cmake: added

	* CMakeLists.txt: try to enable MMX by setting compile flag; error out
	on not finding NASM

2006-08-02  Prakash Punnoor <prakash@punnoor.de>
