@@ -21,9 +21,21 @@ am_libx86_asm_routines_la_OBJECTS += \
 endif
 endif
 
-SUFFIXES = .nasm .lo
+if X8664YASMENABLED
+noinst_LTLIBRARIES = libx86_asm_routines.la
+libx86_asm_routines_la_SOURCES = \
+	x86_64_linux_cpu_caps_detect_prk.yasm
+
+am_libx86_asm_routines_la_OBJECTS = \
+	x86_64_linux_cpu_caps_detect_prk$U.lo
+endif
+
+
+SUFFIXES = .nasm .yasm .lo
 
 CLEANFILES = \
+	x86_64_linux_cpu_caps_detect_prk.o.lst \
+	x86_64_linux_cpu_caps_detect_prk.lo.lst \
 	x86_cpu_caps_detect_prk.o.lst \
 	x86_cpu_caps_detect_prk.lo.lst \
 	memcpy_mmx_prkt.o.lst \
@@ -42,6 +54,17 @@ NASMFLAGS = @NASM_FORMAT@
 	$(ECHO) "pic_object='.libs/$*.o'" >>$@
 	$(ECHO) "non_pic_object='$*.o'" >>$@
 	$(NASM) $(NASMFLAGS) $< -o .libs/$*.o -l $@.lst
+
+.yasm.o:
+	$(NASM) $(NASMFLAGS) $< -o $@ -l $@.lst
+
+.yasm.lo:
+	test -d .libs || mkdir .libs
+	$(ECHO) '# Generated by ltmain.sh - GNU libtool 1.5 (1.1220 2003/04/05 19:32:58)' >$@
+	$(ECHO) "pic_object='.libs/$*.o'" >>$@
+	$(ECHO) "non_pic_object='$*.o'" >>$@
+	$(NASM) $(NASMFLAGS) $< -o .libs/$*.o -l $@.lst
+
 
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
